# rodecaster-tcp-bridge-controller

./: .gitignore  PROTOCOL_AND_BRIDGE.md  README.md  deploy.ps1  deploy.sh  faderMutePackageCapture.txt  run-bridge.sh  run-sniffer.sh  unlink_capture.txt
.github/workflows/: ci.yml
scripts/: run-api.sh  run-proxy.sh  run-sniffer.sh  test_mappings.sh
socket-bridge/: Cargo.toml
socket-bridge/src/: common.rs  injector.rs  listener.rs  main.rs  protocol.rs  sniffer.rs
tcp-bridge/: Cargo.toml
tcp-bridge/src/: commands.rs  lib.rs  listener.rs  main.rs  names.rs  sniffer.rs
tcp-bridge/src/protocol/: level.rs  mix.rs  mod.rs  mute.rs  source.rs  touch.rs
