[package]
name = "tcp-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
socket2 = "0.5"
byteorder = "1.4"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "tcp-bridge"
path = "src/main.rs"

[[bin]]
name = "bridge-ctl"
path = "src/bin/bridge-ctl.rs"

[[bin]]
name = "api-server"
path = "src/bin/api-server.rs"
